Update S1TC1_arboles_ensamblajes - Entregable (1).ipynb

--- a/SEMANA 1/S1TC1_arboles_ensamblajes - Entregable (1).ipynb
+++ b/SEMANA 1/S1TC1_arboles_ensamblajes - Entregable (1).ipynb
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,182 +1142,16 @@
     "\n",
     "    return best_split\n",
     "\n",
-    "# Función para hacer crecer el árbol de regresión\n",
     "def tree_grow(X, y, level=0, min_gain=0.001, max_depth=None, num_pct=10):\n",
     "    if X.shape[0] == 1:\n",
     "        tree = dict(y_pred=y.iloc[:1].values[0], level=level, split=-1, n_samples=1, gain=0)\n",
     "        return tree\n",
     "\n",
     "    j, split, gain = best_split(X, y, num_pct)\n",
-    "\n",
+    "    \n",
     "    y_pred = y.mean()\n",
-    "\n",
+    "    \n",
     "    tree = dict(y_pred=y_pred, level=level, split=-1, n_samples=X.shape[0], gain=gain)\n",
-    "\n",
-    "    if gain < min_gain:\n",
-    "        return tree\n",
-    "    if max_depth is not None:\n",
-    "        if level >= max_depth:\n",
-    "            return tree\n",
-    "\n",
-    "    filter_l = X.iloc[:, j] < split\n",
-    "    X_l, y_l = X.loc[filter_l], y.loc[filter_l]\n",
-    "    X_r, y_r = X.loc[~filter_l], y.loc[~filter_l]\n",
-    "    tree['split'] = [j, split]\n",
-    "\n",
-    "    tree['sl'] = tree_grow(X_l, y_l, level + 1, min_gain=min_gain, max_depth=max_depth, num_pct=num_pct)\n",
-    "    tree['sr'] = tree_grow(X_r, y_r, level + 1, min_gain=min_gain, max_depth=max_depth, num_pct=num_pct)\n",
-    "\n",
-    "    \n",
-    "\n",
-    "# Función para hacer predicciones con el árbol de regresión\n",
-    "def tree_predict(X, tree):\n",
-    "    predicted = np.ones(X.shape[0]) * tree['y_pred']\n",
-    "\n",
-    "    if tree['split'] == -1:\n",
-    "        return predicted\n",
-    "    else:\n",
-    "        j, split = tree['split']\n",
-    "        filter_l = (X.iloc[:, j] < split)\n",
-    "        X_l = X.loc[filter_l]\n",
-    "        X_r = X.loc[~filter_l]\n",
-    "\n",
-    "        if X_l.shape[0] == 0:\n",
-    "            predicted[~filter_l] = tree_predict(X_r, tree['sr'])\n",
-    "        elif X_r.shape[0] == 0:\n",
-    "            predicted[filter_l] = tree_predict(X_l, tree['sl'])\n",
-    "        else:\n",
-    "            predicted[filter_l] = tree_predict(X_l, tree['sl'])\n",
-    "            predicted[~filter_l] = tree_predict(X_r, tree['sr'])\n",
-    "\n",
-    "    return predicted\n",
-    "\n",
-    "# Aplicación de la función tree_grow\n",
-    "tree = tree_grow(X, y, level=0, min_gain=0.001, max_depth=max_depth, num_pct=10)\n",
-    "\n",
-    "# Ejecución de función tree_predict\n",
-    "predictions = tree_predict(X, tree)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.50220264, 0.46105072, 0.41869919, ..., 0.30744849, 0.41869919,\n",
-       "       0.50220264])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Definición de parámetros y criterios de parada\n",
-    "max_depth = 3\n",
-    "num_pct = 10\n",
-    "min_gain = 0.001"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mse(y):\n",
-    "    if y.shape[0] == 0:\n",
-    "        return 0\n",
-    "    else:\n",
-    "        return np.mean((y - y.mean())**2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mse_impurity(X_col, y, split):\n",
-    "    filter_l = X_col < split\n",
-    "    y_l = y.loc[filter_l]\n",
-    "    y_r = y.loc[~filter_l]\n",
-    "\n",
-    "    n_l = y_l.shape[0]\n",
-    "    n_r = y_r.shape[0]\n",
-    "\n",
-    "    mse_y = mse(y)\n",
-    "    mse_l = mse(y_l)\n",
-    "    mse_r = mse(y_r)\n",
-    "\n",
-    "    mse_impurity_ = mse_y - (n_l / (n_l + n_r) * mse_l + n_r / (n_l + n_r) * mse_r)\n",
-    "\n",
-    "    return mse_impurity_\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def best_split(X, y, num_pct=10):\n",
-    "    features = range(X.shape[1])\n",
-    "    best_split = [0, 0, 0]  # j, split, gain\n",
-    "\n",
-    "    for j in features:\n",
-    "        splits = np.percentile(X.iloc[:, j], np.arange(0, 100, 100.0 / (num_pct+1)).tolist())\n",
-    "        splits = np.unique(splits)[1:]\n",
-    "\n",
-    "        for split in splits:\n",
-    "            gain = mse_impurity(X.iloc[:, j], y, split)\n",
-    "\n",
-    "            if gain > best_split[2]:\n",
-    "                best_split = [j, split, gain]\n",
-    "\n",
-    "    return best_split\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tree_grow(X, y, level=0, min_gain=0.001, max_depth=None, num_pct=10):\n",
-    "    if X.shape[0] == 1:\n",
-    "        tree = dict(y_pred=y.iloc[:1].values[0], y_prob=0.5, level=level, split=-1, n_samples=1, gain=0)\n",
-    "        return tree\n",
-    "\n",
-    "    j, split, gain = best_split(X, y, num_pct)\n",
-    "    \n",
-    "    y_pred = y.mean()\n",
-    "    y_prob = (y.sum() + 1.0) / (y.shape[0] + 2.0)  # Corrección Laplace\n",
-    "    \n",
-    "    tree = dict(y_pred=y_pred, y_prob=y_prob, level=level, split=-1, n_samples=X.shape[0], gain=gain)\n",
     "\n",
     "    if gain < min_gain:\n",
     "        return tree\n",
@@ -1335,30 +1169,23 @@
     "\n",
     "    return tree\n",
     "\n",
+    "def tree_predict(X, tree):\n",
+    "    if tree['split'] == -1:\n",
+    "        return np.ones(X.shape[0]) * tree['y_pred']\n",
+    "    else:\n",
+    "        j, split = tree['split']\n",
+    "        filter_l = (X.iloc[:, j] < split)\n",
+    "        X_l = X.loc[filter_l]\n",
+    "        X_r = X.loc[~filter_l]\n",
+    "        \n",
+    "        predicted = np.zeros(X.shape[0])\n",
+    "        predicted[filter_l] = tree_predict(X_l, tree['sl'])\n",
+    "        predicted[~filter_l] = tree_predict(X_r, tree['sr'])\n",
+    "        return predicted\n",
+    "\n",
     "tree = tree_grow(X, y, level=0, min_gain=0.001, max_depth=3, num_pct=10)\n",
     "\n",
-    "predictions = tree_predict(X, tree)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.50220264, 0.46105072, 0.41869919, ..., 0.30744849, 0.41869919,\n",
-       "       0.50220264])"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions"
+    "predictions = tree_predict(X, tree)\n"
    ]
   },
   {
@@ -1371,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1271,7 @@
        "DecisionTreeRegressor(max_depth=9, random_state=1)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1367,7 @@
        "1    hour    0.864162"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1576,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1629,7 @@
        "[5 rows x 61 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1815,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1824,7 +1651,7 @@
        "0.5"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1838,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1857,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1906,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1931,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1949,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1958,7 +1785,7 @@
        "DecisionTreeClassifier(max_depth=4, random_state=1)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1970,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2071,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2131,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2175,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
